16-2-hw/k8s/ingresses/flaskpc-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules: 
  - host: dash.dashboard.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 80
  - host: flask.dashboard.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flaskpc-service
              port:
                number: 5000
